--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -2,7 +2,7 @@
     <div class = "container">
         <div class="item-a">{{product.name}}</div>
         <div class="item-b">{{ product.description}}</div>
-        <div class="item-c"> <p>{{product.unit_price | currency}}</p>  <a href="" id="Like"><img src="https://pngroyale.com/wp-content/uploads/2021/11/Download-emoji-heart-.png" alt=""></a></div>
+        <div class="item-c"> <p>{{product.unit_price | currency}}</p>  <a href="" id="Like"><img src="../../assets/Icons/heart.svg" alt="" style="filter: invert(8%) sepia(89%) saturate(7466%) hue-rotate(11deg) brightness(97%) contrast(114%);"></a></div>
         <div class="item-d"><button class="button-5" role="button">Comprar</button></div>
         <div class="item-e"><img src={{product.image}} alt=""></div>
     </div>
