--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -7,14 +7,14 @@
 
     <div class="item-a">
           <a [title]="product.name"
-          [routerLink]="['/product',product.id]">
+          [routerLink]="['/product/', product.id]">
               {{product.name}}
           </a>
     </div>
 
     <div class = "item-c">
       <p>$ {{product.unit_price}}</p>
-      <a href="" id="Like"><img src="https://pngroyale.com/wp-content/uploads/2021/11/Download-emoji-heart-.png" alt=""></a>
+      <a href="" id="Like"><img src="../../assets/Icons/heart.svg" alt="" style="filter: invert(8%) sepia(89%) saturate(7466%) hue-rotate(11deg) brightness(97%) contrast(114%);"></a>
       
     </div>
 
