--- a/src/app/product-detail/product-detail.component.css
+++ b/src/app/product-detail/product-detail.component.css
@@ -48,21 +48,15 @@
   grid-area: ProductPicture;
 }
 
-.item-e img{
-  max-width: 100%;
-      max-height: 100%;
-      display: block; /* remove extra space below image */
-}
 
 .container {
-  
   grid-gap: 2em;
   margin: auto auto;
   margin-top: 3em;
   max-width: 70%;
   height: 45em;
   display: grid;
-  grid-template-columns: 30%;
+  grid-template-columns: 3fr 7fr;
   grid-template-rows: 15% 50%;
   grid-template-areas: 
       "ProductPicture ProductName "
