--- a/src/app/login-client/login-client.component.html
+++ b/src/app/login-client/login-client.component.html
@@ -22,6 +22,7 @@
 
     <div class="login-button">
         <button class="button-5" role="button" (click)="login()">Login</button>
+        <button class="button-5" role="button" (click)="Cadatro()">Cadastre-se</button>
     </div>
 </div>
 
