--- a/src/app/purchase-client/purchase-client.component.html
+++ b/src/app/purchase-client/purchase-client.component.html
@@ -1,1 +1,26 @@
-<p>purchase-client works!</p>
+<div class="productsList" *ngIf="purchases">
+    <div class="productComponent" *ngFor="let purchase of purchases" >
+        
+      <div class="item-d" >
+        <img src={{purchase.product.image}}>
+      </div>
+  
+      <div class="item-a">
+            <a [title]="purchase.product.number_nf"
+            [routerLink]="['/product',purchase.product.id]">
+                {{purchase.product.name}}
+            </a>
+      </div>
+  
+      <div class = "item-c">
+        <p>$ {{purchase.purchase_values}}</p>
+        <a id="Like"><img src="https://cdn-icons-png.flaticon.com/512/2107/2107845.png" alt=""></a>
+      </div>
+  
+      <div class = "item-b">
+        <p>{{purchase.product.description}}</p>
+      </div>
+  
+  
+    </div>
+  </div>
