adicionando componente card

--- a/src/app/login-client/login-client.component.css
+++ b/src/app/login-client/login-client.component.css
@@ -19,6 +19,9 @@
     grid-area: login;
     align-self: center;
     justify-self: center;
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
 }
 
 .card {
