--- a/src/BaseStyles/card.css
+++ b/src/BaseStyles/card.css
@@ -64,14 +64,16 @@
     height: 3em;
     cursor: pointer;
     filter: invert(8%) sepia(89%) saturate(7466%) hue-rotate(11deg) brightness(97%) contrast(114%);
+    transition: transform .3s ease-in-out;
 }
 
 .price img:hover{
     transform:scale(1.15);
-    transition: ease-in-out .3s;
 }
 
-
+.price img:active{
+    filter: invert(8%) sepia(89%) saturate(7466%) hue-rotate(11deg) brightness(115%) contrast(114%);
+}
 
 .price h1{
     font-size: 2.2em;
