--- a/src/app/client-register/client-register.component.html
+++ b/src/app/client-register/client-register.component.html
@@ -1,17 +1,8 @@
-
 <form class="form">
   <div class="form-field-container">
     <div class="form-field">
       <label for="name" class="form-label">Name:</label>
-      <input
-
-        type=" text"
-        class="form-input"
-
-        placeholder="Insert your name"
-        minlength="3"
-        id = "name"
-      />
+      <input type=" text" class="form-input" placeholder="Insert your name" minlength="3" id="name" />
     </div>
     <span class="alert invisible" id="name-none">Campo Obrigatorio*</span>
     <span class="alert invisible" id="name-lenght">O Nome precisa ter mais de 3 letras</span>
@@ -19,14 +10,8 @@
   <div class="form-field-container">
     <div class="form-field">
       <label for="phone" class="form-label">Phone:</label>
-      <input
-        type="text"
-        placeholder="insert your phone ex: (XX) XXXXX-XXXX"
-        id="phone"
-        name="phone"
-        class="form-input"
-        (keyup)="PhoneMaskField($event)"
-      />
+      <input type="text" placeholder="insert your phone ex: (XX) XXXXX-XXXX" id="phone" name="phone" class="form-input"
+        (keyup)="PhoneMaskField($event)" />
     </div>
     <span class="alert invisible" id="phone-none">Campo Obrigatorio*</span>
     <span class="alert invisible" id="phone-lenght">O Numero deve ter 11 digitos</span>
@@ -35,12 +20,7 @@
   <div class="form-field-container">
     <div class="form-field">
       <label for="email" class="form-label">E-mail:</label>
-      <input
-        type="email"
-        placeholder="insert your E-mail"
-        id="email"
-        class="form-input"
-      />
+      <input type="email" placeholder="insert your E-mail" id="email" class="form-input" />
     </div>
     <span class="alert invisible" id="email-none">Campo Obrigatorio*</span>
     <span class="alert invisible" id="email-valid">Insira um email valido com mais de 3 caracteres</span>
@@ -50,26 +30,16 @@
   <div class="form-field-container">
     <div class="form-field">
       <label for="document" class="form-label">Document:</label>
-      <input
-        type="text"
-        placeholder="Insert your document ex: 999.999.999-52"
-        id="document"
-        class="form-input"
-      />
+      <input type="text" placeholder="Insert your document ex: 999.999.999-52" id="document" class="form-input" />
     </div>
-      <span class="alert invisible" id="document-none">Campo Obrigatorio*</span>
-      <span *ngIf="DocumentError!=undefined" class="alert">{{DocumentError}}</span>
-    </div>
+    <span class="alert invisible" id="document-none">Campo Obrigatorio*</span>
+    <span *ngIf="DocumentError!=undefined" class="alert">{{DocumentError}}</span>
+  </div>
 
   <div class="form-field-container">
     <div class="form-field">
       <label for="birth" class="form-label">Date Of Birth:</label>
-      <input
-        type="date"
-        placeholder="insert your Date Of Birth"
-        id="birth"
-        class="form-input"
-      />
+      <input type="date" placeholder="insert your Date Of Birth" id="birth" class="form-input" />
     </div>
     <span class="alert invisible" id="birth-none">Campo Obrigatorio*</span>
   </div>
@@ -77,12 +47,7 @@
   <div class="form-field-container">
     <div class="form-field">
       <label for="login" class="form-label">Login:</label>
-      <input
-        type="text"
-        placeholder="insert your Login"
-        id="login"
-        class="form-input"
-      />
+      <input type="text" placeholder="insert your Login" id="login" class="form-input" />
     </div>
     <span class="alert invisible" id="login-none">Campo Obrigatorio*</span>
     <span class="alert invisible" id="login-lenght">O Login precisa ter mais de 4 digitos</span>
@@ -92,48 +57,44 @@
   <div class="form-field-container">
     <div class="form-field">
       <label for="password" class="form-label">Password:</label>
-      <input
-        type="text"
-        placeholder="Insira o seu Password"
-        id="password"
-        class="form-input"
-      />
+      <input type="text" placeholder="Insira o seu Password" id="password" class="form-input" />
     </div>
     <span class="alert invisible" id="password-none">Campo Obrigatorio*</span>
-    <span class="alert invisible" id="password-valid">A senha deve ter no minimo 6 digitos e no maximo 12 e conter Letras( Maiusculas e minusculas), numeros e caracteres especiais</span>
+    <span class="alert invisible" id="password-valid">A senha deve ter no minimo 6 digitos e no maximo 12 e conter
+      Letras( Maiusculas e minusculas), numeros e caracteres especiais</span>
   </div>
-
   <div class="form-field-container">
     <div class="form-field">
-      <label for="password" class="form-label">CEP:</label>
-      <input
-        type="text"
-        placeholder="Insira o CEP,  somente numeros"
-        id="cep"
-        class="form-input"
-        (keyup)="ViaCEPAPI()"
-      />
+      <label for="" class="form-label">Estado:</label>
+      <input class="form-input" type="text" name="" id="estado" placeholder="Insira o numeor">
     </div>
   </div>
 
   <div class="form-field-container">
     <div class="form-field">
-      <label for="" class="form-label">Logadouro:</label>
-      <input class="form-input" type="text" name="" id="Logadouro" placeholder="insira o longadouro">
+      <label for="" class="form-label">Pais:</label>
+      <input class="form-input" type="text" name="" id="pais" placeholder="Insira o numeor">
     </div>
   </div>
 
   <div class="form-field-container">
     <div class="form-field">
-      <label for="" class="form-label">Numero:</label>
-      <input class="form-input" type="text" name="" id="numero" placeholder="Insira o numeor">
+      <label for="password" class="form-label">Endereço:</label>
+      <input type="text" placeholder="Insira o Rua,Bairro , numero e complento,  somente numeros" id="endereco" class="form-input" />
     </div>
   </div>
 
   <div class="form-field-container">
     <div class="form-field">
-      <label for="" class="form-label">Complemento:</label>
-      <input class="form-input" type="text" name="" id="complemento" placeholder="Insira o complemenot caso tenha">
+      <label for="" class="form-label">cidade:</label>
+      <input class="form-input" type="text" name="" id="cidade" placeholder="insira o longadouro">
+    </div>
+  </div>
+
+  <div class="form-field-container">
+    <div class="form-field">
+      <label for="" class="form-label">CEP:</label>
+      <input class="form-input" type="text" name="" id="cep" placeholder="Insira o CEP">
     </div>
   </div>
 
@@ -141,6 +102,6 @@
     <button class="button-5 form-button" id="save" (click)="VerifyForm()">
       Save changes
     </button>
-    <button class="button-5 form-button" id="reset">Cancel</button>
+    <a href="client/login"><button class="button-5 form-button" id="reset" (click)="Cancel()">Cancel</button></a>
   </div>
 </form>
