--- a/src/app/login-client/login-client.component.html
+++ b/src/app/login-client/login-client.component.html
@@ -24,7 +24,7 @@
         <button class="button-5" role="button" (click)="login()">Login</button>
         <button class="button-5" role="button" (click)="Cadatro()">Cadastre-se</button>
     </div>
-    <a href="owner/login">Dono de Loja ? Clique aqui!</a>
+    <a href="owner/login">Logista? Clique aqui!</a>
 </div>
 
 
