--- a/src/app/owner-login/owner-login.component.html
+++ b/src/app/owner-login/owner-login.component.html
@@ -24,6 +24,7 @@
         <button class="button-5" role="button" (click)="login()">Login</button>
         <button class="button-5" role="button" (click)="Cadatro()">Cadastre-se</button>
     </div>
+    <a href="client/login">Usuario? Clique aqui!</a>
 </div>
 
 
