--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,16 +1,28 @@
 <div *ngIf="product">
-    <div class = "container">
-        <div class="item-a">{{product.name}}</div>
-        <div class="item-b">{{ product.description}}</div>
-        <div class="item-c"> 
-            <p>{{product.unit_price | currency}}</p>  
-            <img src="../../assets/Icons/heart.svg" alt="" 
-            style="filter: invert(8%) sepia(89%) saturate(7466%) hue-rotate(11deg) brightness(97%) contrast(114%);"
-            (click)="AddProductToWishList(product.idStocks)">
+    <div class = "main-container">
+        <div class="container-information">
+
+            <h1 class="name">{{product.name}}</h1>
+            
+            <div class="price">
+                <p>R$</p>
+                <h2>{{product.unit_price | number:'1.2-2'}}</h2>  
+            </div>
+            
+            
+            <h4 class="description">{{ product.description}}</h4>
+            
+            <button class="button-5 purchase" (click)="makePurchase()">Comprar</button>
         </div>
-        <div class="item-d"><button class="button-5" (click)="makePurchase()">Comprar</button></div>
-        <div class="item-e"><img src={{product.image}} alt=""></div>
+        <div class="container-image">
+            <div class="image">
+                <img src="https://s2.svgbox.net/hero-outline.svg?color=F39237&ic=heart" alt="" 
+                (click)="AddProductToWishList(product.idStocks)"
+                class="icon">
+    
+                <img class="photo" src={{product.image}} alt="">
+            </div>
+        </div>
+
     </div>
 </div>
-
-
