mudando para login unico

--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,3 +1,5 @@
+<app-top-bar></app-top-bar>
+
 <div *ngIf="product">
     <div class = "main-container">
         <div class="container-information">
