--- a/src/app/purchase-client/purchase-client.component.html
+++ b/src/app/purchase-client/purchase-client.component.html
@@ -1,3 +1,5 @@
+<app-top-bar></app-top-bar>
+
 <div class="productsList" *ngIf="purchases">
     <div class="productComponent" *ngFor="let purchase of purchases" >
 
