--- a/src/app/top-bar/top-bar.component.css
+++ b/src/app/top-bar/top-bar.component.css
@@ -1,7 +1,12 @@
+
+.navbar{
+    height: 100% !important;
+    align-self: top;
+}
+
 .margin{
     margin-left: 2em;
     margin-right: 2em;
 }
 
-  
 
