--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,30 +1,32 @@
 <app-top-bar></app-top-bar>
 
-<div *ngIf="product">
-    <div class = "main-container">
-        <div class="container-information">
-
-            <h1 class="name">{{product.name}}</h1>
-            
-            <div class="price">
-                <p>R$</p>
-                <h2>{{product.unit_price | number:'1.2-2'}}</h2>  
-            </div>
-            
-            
-            <h4 class="description">{{ product.description}}</h4>
-            
-            <button class="button-5 purchase" (click)="makePurchase()">Comprar</button>
-        </div>
-        <div class="container-image">
-            <div class="image">
-                <img src="https://s2.svgbox.net/hero-outline.svg?color=F39237&ic=heart" alt="" 
-                (click)="AddProductToWishList(product.idStocks)"
-                class="icon">
+<div class="content-container">
+    <div *ngIf="product">
+        <div class = "main-container">
+            <div class="container-information">
     
-                <img class="photo" src={{product.image}} alt="">
+                <h1 class="name">{{product.name}}</h1>
+                
+                <div class="price">
+                    <p>R$</p>
+                    <h2>{{product.unit_price | number:'1.2-2'}}</h2>  
+                </div>
+                
+                
+                <h4 class="description">{{ product.description}}</h4>
+                
+                <button class="button-5 purchase" (click)="makePurchase()">Comprar</button>
             </div>
+            <div class="container-image">
+                <div class="image">
+                    <img src="https://s2.svgbox.net/hero-outline.svg?color=F39237&ic=heart" alt="" 
+                    (click)="AddProductToWishList(product.idStocks)"
+                    class="icon">
+        
+                    <img class="photo" src={{product.image}} alt="">
+                </div>
+            </div>
+    
         </div>
-
     </div>
 </div>
