--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -1,23 +1,26 @@
 <app-top-bar></app-top-bar>
 
-<div class="productsList" *ngIf="products">
-  <div *ngFor="let product of products">
-    
-    <div class="container">
-      <img src="{{product.image}}" alt="">
-  
-      <a title="{{product.name}}" 
-      [routerLink]="['/product/' + product.id]">
-          <h1>{{product.name}}</h1>
-      </a>
-  
-      <p>{{product.description}}</p>
-  
-      <div class="price">
-          <h1>{{product.unit_price | currency}}</h1>
-          <img src="../../assets/Icons/heart.svg" alt="" (click)="AddProductToWishList(product.idStocks)">
-      </div>
-  </div>
 
+<div class="content-container">
+  <div class="productsList" *ngIf="products">
+    <div *ngFor="let product of products">
+      
+      <div class="container">
+        <img src="{{product.image}}" alt="">
+    
+        <a title="{{product.name}}" 
+        [routerLink]="['/product/' + product.id]">
+            <h1>{{product.name}}</h1>
+        </a>
+    
+        <p>{{product.description}}</p>
+    
+        <div class="price">
+            <h1>{{product.unit_price | currency}}</h1>
+            <img src="../../assets/Icons/heart.svg" alt="" (click)="AddProductToWishList(product.idStocks)">
+        </div>
+    </div>
+  
+    </div>
   </div>
 </div>
