--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -15,8 +15,8 @@
 
                     <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="navbarDarkDropdownMenuLink">
                         <li *ngIf="logado"><a class="dropdown-item" (click)="profile()">Perfil</a></li>
-                        <li *ngIf="client"><a class="dropdown-item" [routerLink]="['client/purchase']">Purchases</a></li>
-                        <li *ngIf="client"><a class="dropdown-item" [routerLink]="['wishlist']">WishList</a></li>
+                        <li *ngIf="client"><a class="dropdown-item" href="client/purchase">Purchases</a></li>
+                        <li *ngIf="client"><a class="dropdown-item" href="wishlist">WishList</a></li>
                         <li *ngIf="owner"><a class="dropdown-item" (click)="sair()">Sales</a></li>
                         <li *ngIf="owner"><a class="dropdown-item" (click)="sair()">Register Product</a></li>
                         <li *ngIf="logado"><a class="dropdown-item" (click)="sair()">Logout</a></li>
