--- a/src/app/product-register/product-register.component.html
+++ b/src/app/product-register/product-register.component.html
@@ -5,68 +5,67 @@
 
         <div class="form-field-container">
             <div class="form-field">
-                <label for="birth" class="form-label">nome produto:</label>
-                <input type="date" placeholder="insert your Date Of Birth" id="birth" class="form-input" />
+                <label for="product" class="form-label">Product name:</label>
+                <input type="text" placeholder="Insert the product name" id="product" class="form-input" />
             </div>
-            <span class="alert invisible" id="birth-none">Campo Obrigatorio*</span>
+            <span class="alert invisible" id="product-none">Required input*</span>
         </div>
     
         <div class="form-field-container">
             <div class="form-field">
-                <label for="login" class="form-label">codigo barras:</label>
-                <input type="text" placeholder="insert your Login" id="login" class="form-input" />
+                <label for="barCode" class="form-label">Bar code:</label>
+                <input type="text" placeholder="Insert the bar code" id="barCode" class="form-input" />
             </div>
-            <span class="alert invisible" id="login-none">Campo Obrigatorio*</span>
-            <span class="alert invisible" id="login-lenght">O Login precisa ter mais de 4 digitos</span>
-            <span class="alert" *ngIf="LoginError!=undefined">{{LoginError}}</span>
+            <span class="alert invisible" id="barCode-none">Required input*</span>
         </div>
     
         <div class="form-field-container">
             <div class="form-field">
-                <label for="password" class="form-label">descrição:</label>
-                <input type="text" placeholder="Insira o seu Password" id="password" class="form-input" />
+                <label for="description" class="form-label">Description:</label>
+                <input type="text" placeholder="Insert the description" id="description" class="form-input" />
             </div>
-            <span class="alert invisible" id="password-none">Campo Obrigatorio*</span>
-            <span class="alert invisible" id="password-valid">A senha deve ter no minimo 6 digitos e no maximo 12 e conter
-                Letras( Maiusculas e minusculas), numeros e caracteres especiais</span>
+            <span class="alert invisible" id="description-none">Required input*</span>
         </div>
         <div class="form-field-container">
             <div class="form-field">
-                <label for="" class="form-label">imagem:</label>
-                <input class="form-input" type="text" name="" id="estado" placeholder="Insira o numeor">
+                <label for="image" class="form-label">Product image:</label>
+                <input class="form-input" type="text" name="" id="image" placeholder="Insert the image">
             </div>
         </div>
         
         <div class="form-field-container">
             <div class="form-field">
-                <label for="name" class="form-label">Quantidade:</label>
-                <input type=" text" class="form-input" placeholder="Insert your name" minlength="3" id="name" />
+                <label for="Qtd" class="form-label">Quantity:</label>
+                <input type="number" class="form-input" placeholder="Insert the number of products" id="Qtd" />
             </div>
-            <span class="alert invisible" id="name-none">Campo Obrigatorio*</span>
-            <span class="alert invisible" id="name-lenght">O Nome precisa ter mais de 3 letras</span>
+            <span class="alert invisible" id="Qtd-none">Required input*</span>
         </div>
         <div class="form-field-container">
             <div class="form-field">
-                <label for="phone" class="form-label">Preço:</label>
-                <input type="text" placeholder="insert your phone ex: (XX) XXXXX-XXXX" id="phone" name="phone"
-                    class="form-input" (keyup)="PhoneMaskField($event)" />
+                <label for="price" class="form-label">Price:</label>
+                <input type="text" placeholder="insert the price" id="price" name="price"
+                    class="form-input"/>
             </div>
-            <span class="alert invisible" id="phone-none">Campo Obrigatorio*</span>
-            <span class="alert invisible" id="phone-lenght">O Numero deve ter 11 digitos</span>
+            <span class="alert invisible" id="price-none">Required input*</span>
         </div>
     
         <div class="form-field-container">
             <div class="form-field">
-                <label for="document" class="form-label">Loja Select box:</label>
-                <input type="text" placeholder="Insert your document ex: 999.999.999-52" id="document" class="form-input" />
+                <label for="document" class="form-label">Store:</label>
+                <select name="store" id="store" class="form-select" placeholder="Selet the store">
+                    <option value="" disabled selected>Categorias</option>
+                        <option value="">Todas</option>
+                        <option value="{{categoria.cnpj}}" *ngFor="let categoria of stores">{{categoria.cnpj}}
+                        </option>
+                </select>
+            
             </div>
-            <span class="alert invisible" id="document-none">Campo Obrigatorio*</span>
-            <span *ngIf="DocumentError!=undefined" class="alert">{{DocumentError}}</span>
+            <span class="alert invisible" id="store-none">Required input*</span>
         </div>
     
         
         <div class="form-field-button">
-            <button class="button-5 form-button" id="save" (click)="VerifyForm()">
+            <button class="button-5 form-button" id="save" (click)="RegisterStock()">
                 Save changes
             </button>
             <button class="button-5 form-button" id="reset" (click)="Cancel()">Cancel</button>
