--- a/src/app/owner-sales/owner-sales.component.html
+++ b/src/app/owner-sales/owner-sales.component.html
@@ -46,8 +46,7 @@
           
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target= "#Sucesso"  data-bs-dismiss="modal">Salvar</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
         </div>
       </div>
     </div>
