--- a/src/app/client-register/client-register.component.css
+++ b/src/app/client-register/client-register.component.css
@@ -1,14 +1,16 @@
 *{
-    margin: 0;
+    margin:0;
 }
 
 .form{
+    margin: auto;
+    margin-top: 5em;
+
     display: flex;
     justify-items: center;
     flex-direction: column;
     gap: 0.5em;
     width: 30%;
-    margin: auto;
 }
 .form-field-container{
     display: flex;
