--- a/src/app/top-bar/top-bar.component.css
+++ b/src/app/top-bar/top-bar.component.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+  
 }
 
 .margin{
@@ -10,7 +11,7 @@
 }
 
 .position-top{
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
