ajustando telas e erros owners

--- a/src/app/client-register/client-register.component.html
+++ b/src/app/client-register/client-register.component.html
@@ -1,4 +1,4 @@
-<app-top-bar></app-top-bar>
+<!-- <app-top-bar></app-top-bar> -->
 
 <form class="form">
   <div class="form-field-container">
@@ -67,36 +67,36 @@
   </div>
   <div class="form-field-container">
     <div class="form-field">
-      <label for="" class="form-label">Estado:</label>
-      <input class="form-input" type="text" name="" id="estado" placeholder="Insira o numeor">
+      <label for="" class="form-label">State:</label>
+      <input class="form-input" type="text" name="" id="estado" placeholder="Insert Your State">
     </div>
   </div>
 
   <div class="form-field-container">
     <div class="form-field">
-      <label for="" class="form-label">Pais:</label>
-      <input class="form-input" type="text" name="" id="pais" placeholder="Insira o numeor">
+      <label for="" class="form-label">Country:</label>
+      <input class="form-input" type="text" name="" id="pais" placeholder="Insert Your country">
     </div>
   </div>
 
   <div class="form-field-container">
     <div class="form-field">
-      <label for="password" class="form-label">Endereço:</label>
-      <input type="text" placeholder="Insira o Rua,Bairro , numero e complento,  somente numeros" id="endereco" class="form-input" />
+      <label for="password" class="form-label">Address:</label>
+      <input type="text" placeholder="Insert Your Address" id="endereco" class="form-input" />
     </div>
   </div>
 
   <div class="form-field-container">
     <div class="form-field">
-      <label for="" class="form-label">cidade:</label>
-      <input class="form-input" type="text" name="" id="cidade" placeholder="insira o longadouro">
+      <label for="" class="form-label">City:</label>
+      <input class="form-input" type="text" name="" id="cidade" placeholder="Insert Your City">
     </div>
   </div>
 
   <div class="form-field-container">
     <div class="form-field">
-      <label for="" class="form-label">CEP:</label>
-      <input class="form-input" type="text" name="" id="cep" placeholder="Insira o CEP">
+      <label for="" class="form-label">Zip Code:</label>
+      <input class="form-input" type="text" name="" id="cep" placeholder="Insert Your Zip Code">
     </div>
   </div>
 
