--- a/src/app/owner-register/owner-register.component.html
+++ b/src/app/owner-register/owner-register.component.html
@@ -67,56 +67,56 @@
     </div>
     <div class="form-field-container">
         <div class="form-field">
-            <label for="" class="form-label">Estado:</label>
-            <input class="form-input" type="text" name="" id="estado" placeholder="Insira o numeor">
+            <label for="" class="form-label">State:</label>
+            <input class="form-input" type="text" name="" id="estado" placeholder="Insert your state">
         </div>
     </div>
 
     <div class="form-field-container">
         <div class="form-field">
-            <label for="" class="form-label">Pais:</label>
-            <input class="form-input" type="text" name="" id="pais" placeholder="Insira o numeor">
+            <label for="" class="form-label">Country:</label>
+            <input class="form-input" type="text" name="" id="pais" placeholder="Insert your country">
         </div>
     </div>
 
     <div class="form-field-container">
         <div class="form-field">
-            <label for="password" class="form-label">Endereço:</label>
-            <input type="text" placeholder="Insira o Rua,Bairro , numero e complento,  somente numeros" id="endereco"
+            <label for="password" class="form-label">Address:</label>
+            <input type="text" placeholder="Insert your Address" id="endereco"
                 class="form-input" />
         </div>
     </div>
 
     <div class="form-field-container">
         <div class="form-field">
-            <label for="" class="form-label">cidade:</label>
-            <input class="form-input" type="text" name="" id="cidade" placeholder="insira o longadouro">
+            <label for="" class="form-label">City:</label>
+            <input class="form-input" type="text" name="" id="cidade" placeholder="Insert Your city">
         </div>
     </div>
 
     <div class="form-field-container">
         <div class="form-field">
-            <label for="" class="form-label">CEP:</label>
-            <input class="form-input" type="text" name="" id="cep" placeholder="Insira o CEP">
+            <label for="" class="form-label">Zip code::</label>
+            <input class="form-input" type="text" name="" id="cep" placeholder="Insert your Zip code">
         </div>
     </div>
 
     <div class="form-field-container">
         <div class="form-field">
             <label for="" class="form-label">CNPJ:</label>
-            <input class="form-input" type="text" name="" id="cnpj" placeholder="Insira o CEP">
+            <input class="form-input" type="text" name="" id="cnpj" placeholder="Insert your CNPJ">
         </div>
     </div>
 
     <div class="form-field-container">
         <div class="form-field">
-            <label for="" class="form-label">Razão Social:</label>
-            <input class="form-input" type="text" name="" id="razao" placeholder="Insira o CEP">
+            <label for="" class="form-label">Name Store:</label>
+            <input class="form-input" type="text" name="" id="razao" placeholder="Insert a Name store">
         </div>
     </div>
 
     <div class="form-field-button">
-        <button class="button-5 form-button" id="save" (click)="VerifyForm()">
+        <button class="button-5 form-button" id="save" (click)="VerifyForm()" type="button">
             Save changes
         </button>
         <button class="button-5 form-button" id="reset" (click)="Cancel()">Cancel</button>
